# ML-project

./: .gitignore  app.py  generate_model.py  model.py  model_info.txt  orginal_model.py  pyproject.toml  requirements.txt  streamlit.py  streamlit_app.py  test_model2.ipynb  test_synthetic.py
flask_app/templates/: index.html
static/: style.css
templates/: result.html
